--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ai hoi</title>
+    <title>Thân Gửi Vương Óc Cặc</title>
+    <style>
+        h1 {
+           color:red;text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <p>
-        địt mẹ mấy con chó súc vật khang ,phát ,giang , vương địt cụ chúng mày<br>
-        chét cụ đi hút C đơ hết cụ não cả lũ
-    </p>
+    <h1>
+        ĐỊT CỤ MẸ NHÀ MÀY VƯƠNG NGU LỒN
+    </h1>
 </body>
 </html>
